# Deneb

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  README.md  REUSE.toml  SECURITY.md  THIRD_PARTY_NOTICES.md  UM2C_MODDING_CHECKLIST.md
.github/workflows/: ci.yml
assets/branding/: README.md
common/print/: buildplate_level.c  buildplate_level.h  command_format.c  command_format.h  diagnostics_export.c  diagnostics_export.h  frame_light.c  frame_light.h  gcode_command.c  gcode_command.h  json_field.c  json_field.h  json_file.c  json_file.h  json_string.c  json_string.h  lodepng_standalone_alloc.c  manual_motion.c  manual_motion.h  material_catalog.c  material_catalog.h  material_workflow.c  material_workflow.h  pending_job_dispatch.c  pending_job_dispatch.h  pending_job_file.c  pending_job_file.h  print_action_dispatch.c  print_action_dispatch.h  print_action_rules.c  print_backend_route.c  print_backend_route.h  print_history.c  print_history.h  (+22 more)
dfsvc/: CMakeLists.txt
dfsvc/init/: digitalfactory.init
dfsvc/src/: main.c
docs/: BACKEND_IPC_PROTOCOL.md  BASELINE_MEASUREMENTS.md  COORDINATOR_PARITY_COMPLETION_PLAN.md  CURA_INTEGRATION.md  DF_LIFECYCLE_CLASSIFICATION.md  ETH_SETUP.md  FAULT_POLICY.md  FIRMWARE_AUDIT.md  LOW_HANGING_NATIVE_SERVICE_CHECKLIST.md  PLATFORM_MODERNIZATION_ROADMAP.md  PRINTSVC_EVIDENCE_LEDGER.md  PRINTSVC_INTEGRATION_AUDIT.md  PRINTSVC_LEGACY_PARITY_AUDIT.md  PRINTSVC_STOCK_PARITY_REVIEW.md  PROJECT_STATUS.md  README.md  REPOSITORY_SETUP.md  RESOURCE_REDUCTION_PLAN.md  SLICER_COMPATIBILITY.md  SOURCE_PROVENANCE.md  SSH_BOOTSTRAP_PLAN.md  STOCK_UI_COVERAGE.md  TOUCHSCREEN_SCREEN_CATALOG.md  WEB_UI.md  WIFI_SETUP.md  WSL_BUILD_ENVIRONMENT.md  ultimaker-api-v1.json
notices/: MPL-2.0.txt  libzmq-4.3.5-NOTICE.txt
printsvc/: CMakeLists.txt  README.md
printsvc/init/: deneb-printsvc.init
printsvc/macros/: buildplate_level_finish.gcode  buildplate_level_step1.gcode  buildplate_level_step2.gcode  buildplate_level_step3.gcode  buildplate_level_step4.gcode  framelight_off.gcode  framelight_on.gcode  home_and_center_head.gcode  home_release.gcode  init.gcode  material_down.gcode  move_buildplate_down.gcode  move_buildplate_up.gcode  move_material_finish.gcode  move_material_up.gcode  print_finish.gcode  retract.gcode
printsvc/src/: command.c  command.h  command_audit.c  command_audit.h  command_dispatch.c  command_dispatch.h  command_format.c  command_format.h  command_reply.c  command_reply.h  config.h  crc.c  crc.h  diagnostics_log.c  diagnostics_log.h  error_map.c  error_map.h  flow_control.c  flow_control.h  gcode_control.c  gcode_control.h  gcode_rewrite.c  gcode_rewrite.h  gcode_stream.c  gcode_stream.h  heater_wait.c  heater_wait.h  ipc_frame.c  ipc_zmq.c  ipc_zmq.h  job_control.c  job_control.h  job_lifecycle.c  job_lifecycle.h  job_streamer.c  job_streamer.h  macro_control.c  macro_control.h  macro_registry.c  macro_registry.h  (+43 more)
printsvc/tests/: test_printsvc.c
tools/: build-cura-plugin.ps1  build-get-started.ps1  build-ssh-bootstrap.ps1  build-ui-host.ps1  build-ui-release.ps1  build-update-release.ps1  build-update-release.sh  capture-ui-screens.ps1  check-markdown-links.ps1  check-publication-boundary.ps1  deneb-active-physical-soak-runner.sh  deneb-compile-all-selftest.sh  deneb-df-measure.sh  deneb-printsvc-cli-selftest.sh  deneb-printsvc-init-selftest.sh  deneb-printsvc-integration-audit-selftest.sh  deneb-printsvc-integration-audit.sh  deneb-printsvc-native-audit-selftest.sh  deneb-printsvc-native-audit.sh  deneb-printsvc-release-gate-selftest.sh  deneb-printsvc-smoke-compare.sh  deneb-printsvc-smoke-selftest.sh  deneb-printsvc-smoke-verify.sh  deneb-printsvc-smoke.sh  deneb-printsvc-stability.sh  deneb-printsvc-stock-baseline.sh  deneb-printsvc-valgrind.sh  deneb-python-runtime-inventory.sh  deneb-stock-menu-import-check.sh  deneb-stock-menu-prune-selftest.sh  generate-ui-assets.py  png-to-rgb565.py  setup-linux-build.sh  setup-wsl-build.sh
ui/: .gitignore  CMakeLists.txt  README.md  build-package.sh  eth.txt.example  wifi.txt.example
ui/cmake/: mips-linux-gnu-toolchain.cmake  mips-openwrt-toolchain.cmake  mipsel-linux-gnu-toolchain.cmake  mipsel-musl-toolchain.cmake
ui/config/: lv_conf.h
ui/init/: deneb-ui.init
ui/installer/: update.sh
ui/locales/: de.json  en-1337.json  en-pirate.json  en.json  fr.json  nl.json  zh-Hans.json
ui/scripts/: deneb-df-bridge.py
ui/src/: app_fonts.c  app_fonts.h  backend_comm.c  backend_comm.h  eth_setup.c  eth_setup.h  locale.c  locale.h  main.c  net_utils.c  net_utils.h  screen_mgr.c  screen_mgr.h  wifi_setup.c  wifi_setup.h
ui/src/assets/: deneb_logo_116.c  ic_bed_16.c  ic_nozzle_16.c
ui/src/df-bridge/: deneb-df-bridge.c
ui/src/drivers/: fb_driver.c  fb_driver.h  fb_driver_stub.c  touch_driver.c  touch_driver.h  touch_driver_stub.c
ui/src/fonts/: deneb_font_i18n_12.c  deneb_font_i18n_14.c  deneb_font_i18n_16.c
ui/src/screens/: screen_about.c  screen_diagnostics.c  screen_digital_factory.c  screen_error.c  screen_factory_reset.c  screen_frame_lighting.c  screen_home.c  screen_jog.c  screen_language.c  screen_level.c  screen_maintenance.c  screen_material.c  screen_network.c  screen_nozzle_size.c  screen_print.c  screen_print_conflict.c  screen_set_material.c  screen_settings.c  screen_status.c  screen_temp.c  screen_update.c
web/: CMakeLists.txt  lighttpd.conf
web/init/: deneb-api.init  deneb-mdns.init  deneb-web.init
web/src/: api_auth.c  api_auth.h  api_cluster.c  api_cluster.h  api_cluster_materials.h  api_deneb.c  api_deneb.h  api_http.c  api_http.h  api_materials.c  api_materials.h  api_multipart.c  api_multipart.h  api_print_job.c  api_print_job.h  api_printer.c  api_printer.h  api_system.c  api_system.h  backend_zmq.c  backend_zmq.h  df_bridge.c  df_bridge.h  json_writer.c  json_writer.h  main.c  md5.c  md5.h  mdns_advertiser.c
web/www/: index.html
web/www/css/: style.css
web/www/js/: api.js  app.js  i18n.js  ui.js
web/www/locales/: de.json  en-1337.json  en-pirate.json  en.json  fr.json  nl.json  zh-Hans.json
(+19 files in other folders)
